--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,9 +1,13 @@
 FROM node:20-alpine AS build
 
 WORKDIR /app
-COPY package*.json .
-RUN npm install
-COPY . .
+
+COPY package*.json . 
+
+RUN npm ci 
+
+COPY . . 
+
 RUN npm run build
 
 FROM nginx:stable-alpine
