--- a/nginx.conf
+++ b/nginx.conf
@@ -4,8 +4,18 @@ server {
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
-        try_files $uri $uri/ /index.html =404;
+        try_files $uri $uri/ /index.html;
     }
 
-    include /etc/nginx/extra-conf.d/*.conf;
+    location /static/ {
+        alias /usr/share/nginx/html/static/;
+    }
+
+    location /favicon.ico {
+        alias /usr/share/nginx/html/favicon.ico;
+    }
+
+    location /manifest.json {
+        alias /usr/share/nginx/html/manifest.json;
+    }
 }
