--- a/nginx.conf
+++ b/nginx.conf
@@ -4,18 +4,8 @@ server {
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ /index.html =404;
     }
 
-    location /static/ {
-        alias /usr/share/nginx/html/static/;
-    }
-
-    location /favicon.ico {
-        alias /usr/share/nginx/html/favicon.ico;
-    }
-
-    location /manifest.json {
-        alias /usr/share/nginx/html/manifest.json;
-    }
+    include /etc/nginx/extra-conf.d/*.conf;
 }
