--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -12,7 +12,7 @@ RUN npm run build
 
 FROM nginx:stable-alpine
 
-COPY --from=build /app/build /usr/share/nginx/html
+COPY --from=build /app/build /var/www/dist
 COPY --from=build /app/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 3000
 RUN chmod -R 755 /usr/share/nginx/html
