--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ server {
   listen 3000;
 
   location / {
-    root /var/www/dist;;
+    root /var/www/dist;
     index index.html index.htm;
     try_files $uri $uri/ /index.html =404;
   }
