--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -16,5 +16,6 @@ COPY --from=build /app/build /usr/share/nginx/html
 COPY --from=build /app/nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 3000
-RUN chmod -R 755 /usr/share/nginx/html
+# RUN chmod -R 755 /usr/share/nginx/html
+RUN chown nginx:nginx /usr/share/nginx/html/*
 CMD ["nginx", "-g", "daemon off;"]
